fix(css): fixed css overflow for mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1403,6 +1403,22 @@ a:visited {
 /* Small screens */
 
 @media screen and (max-width: 992px) {
+    html,
+    body {
+        overflow: initial;
+    }
+    .high-img::before {
+        height: 100vh;
+        width: 100vw;
+        margin: 0;
+        position: absolute;
+        content: ' ';
+        top: 0;
+        left: 0;
+        background: url(/img/iss-master.jpg) center no-repeat;
+        background-size: cover;
+        z-index: -1;
+    }
     .mobile-nav {
         height: 10vh;
         display: flex;
